[project]
name = "hoard"
version = "0.1.0"
description = ""
authors = [
    {name = "Zandari",email = "kirillgluhih1@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questdb (>=2.0.4,<3.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "hoard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
