[project]
name = "hoard"
version = "0.1.0"
description = ""
authors = [
    {name = "zandari",email = "kirillgluhih1@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questdb (>=2.0.4,<3.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.poetry]
package-mode=false

[tool.poetry.group.ui.dependencies]
streamlit = "^1.46.1"
plotly = "^6.2.0"
pandas = "^2.3.1"
requests = "^2.32.4"


[tool.poetry.group.testing.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
